# 2040-LiteBrite

./: .gitignore
litebrite-backend/: CMakeLists.txt  TODO.md
litebrite-backend/application/: CMakeLists.txt  config.hpp  embedded.cpp  main.cpp  runtime.cpp  runtime.hpp
litebrite-backend/cmake/: boost.cmake  crow.cmake  crypto.cmake  oatpp.cmake  sqlite_orm.cmake  sqlitecpp.cmake
litebrite-backend/config/: embedded.default.json  embedded.develop.json
litebrite-backend/internal/domain/: color.hpp  display.hpp  installation.hpp  site.hpp  user.hpp
litebrite-backend/internal/domain/color/: color.hpp
litebrite-backend/internal/domain/lighting/: fixture.hpp  installation.hpp  pixel.hpp
litebrite-backend/internal/infrastructure/: CMakeLists.txt
litebrite-backend/internal/infrastructure/art_net/: CMakeLists.txt  art_net.cpp  art_net.hpp  controller.cpp  packet.hpp  universe.cpp
litebrite-backend/internal/infrastructure/artnet/: CMakeLists.txt  artnet.cpp  artnet.hpp  controller.cpp  controller.hpp  packet.hpp  universe.hpp
litebrite-backend/internal/infrastructure/asio/: context.hpp
litebrite-backend/internal/infrastructure/auth/: CMakeLists.txt  auth.cpp  auth.hpp
litebrite-backend/internal/infrastructure/db/: CMakeLists.txt  db.cpp  db.hpp  display.cpp  migrations.cpp  seed.cpp  site.cpp  user.cpp
litebrite-backend/internal/infrastructure/graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp
litebrite-backend/internal/infrastructure/udp/: CMakeLists.txt  receiver.cpp  receiver.hpp  sender.cpp  sender.hpp
litebrite-backend/internal/infrastructure/webserver/: CMakeLists.txt  authenticate_middleware.hpp  authorize_middleware.hpp  cors_options_middleware.hpp  handlers.cpp  handlers_auth.cpp  options_route.hpp  route_handlers.cpp  subdomain_cors.hpp  webserver.cpp  webserver.hpp
litebrite-backend/internal/service/: CMakeLists.txt  embedded.cpp  embedded.hpp  embedded_service.cpp  embedded_service.hpp
litebrite-backend/internal/utils/: buffers.hpp  clock.hpp  files.hpp
litebrite-backend/management/: lighting.polis.tv
litebrite-backend/scripts/: nuc_bringup.md  setup-third-party.sh
litebrite-backend/system/: server.service
litebrite-backend/test/: CMakeLists.txt  test.db
litebrite-backend/test/test_infrastructure/: test_asio_utils.hpp
litebrite-backend/test/test_infrastructure/test_artnet/: test_artnet_controller.cpp
litebrite-backend/test/test_infrastructure/test_auth/: test_auth.cpp
litebrite-backend/test/test_infrastructure/test_db/: test_creation.cpp
litebrite-backend/test/test_infrastructure/test_udp/: test_udp_sender.cpp
litebrite-frontend/: .gitignore  .npmrc  app.vue  nuxt.config.ts  package-lock.json  package.json
litebrite-frontend/composables/: useAuth.ts  (+2 more)
litebrite-management/: README.md  authorized_keys.client  lighting.polis.tv
(+48 files in other folders)
